# human-centric-artificial-intelligence

./: CLAUDE.md  pyproject.toml
home/: views.py
home/static/home/: style.css
home/templates/home/: index.html
pbl/: settings.py  urls.py
project1/: models.py  urls.py  views.py
project1/static/project1/: style.css
project1/templates/project1/: index.html
project1/tests/: generate.py  test_views.py
project1/tests/generated_datasets/: iris_binary.csv  iris_missing.csv  iris_renamed.csv  iris_shuffled_columns.csv  iris_single_feature.csv  iris_with_id.csv  iris_with_noise.csv
project2/: counterfactuals.py  data.py  decision_tree.py  feature_effects.py  logistic_reg.py  models.py  urls.py  views.py
project2/static/project2/: style.css
project2/templates/project2/: index.html
project2/tests/: test_views.py
project3/: active_learning.py  apps.py  classifier.py  data.py  deferral.py  experts.py  models.py  report.py  urls.py  views.py
project3/static/project3/: style.css
project3/templates/project3/: human_label.html  index.html
static/: plotly-theme.js  style.css
templates/: base.html
